@@ -1,3 +1,9 @@
+2009-01-31  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Glasses/TringuCam.cxx:
+	* Glasses/TringuCam.h:
+	Add function 'Help()' to print basic usage info.
+
 2009-01-18  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Glasses/Crawler.cxx:
